channel history column spacing is finally correct

--- a/ClientApp/src/pages/chatPage/chatPage.css
+++ b/ClientApp/src/pages/chatPage/chatPage.css
@@ -19,41 +19,20 @@
     height: 100vh;
 }
 
-
 .jumbo-cols{
     border-width: 1px 1px 1px 1px;
     border-style: solid;
     border-color: black;
 }
 
-
-#jumbotron-headers > div{
-    border-width: 1px 1px 0px 1px;
-    border-style: solid;
-    border-color: black;
-}
-#jumbotron-content > div{
-    /* height: 80vh; */
-    border-width: 0px 1px 1px 1px;
-    border-style: solid;
-    border-color: black;}
-
-#chat-log{
-    display: inline-block;
-    flex-direction: column-reverse;
-}
-
-#message-form{
-    display: inline-block;
-}
-
-#chat-jumbotron-center-column{
+#texts-col{
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: space-between;
+}
+#channel-history{
+    background-color: red;
+    height: 100%;
+    overflow-y:auto;
 }
 
-#chat-history > div{
-    display: flexbox;
-    background-color: white;
-}
